--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,7 @@ DB_USER= #required
 DB_PASSWORD= #required
 DB_NAME= #required
 DB_PORT=  #optional
+
+HTTPS= #required boolean
+SSL_CERT= #required string
+SSL_KEY= #required string
